// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`#sprockets/sprockets <Sprocket /> With additional props matches the snapshot 1`] = `
<div
  className="sprocket"
>
  <Group>
    <fieldset
      className="group"
    >
      <Title>
        <legend
          className="title"
        >
          <TextContent>
            <span
              className="text-content"
            >
              MOCK TITLE
            </span>
          </TextContent>
        </legend>
      </Title>
      MOCK CHILDREN
    </fieldset>
  </Group>
</div>
`;

exports[`#sprockets/sprockets <Sprocket /> With required props matches the snapshot 1`] = `
<div
  className="sprocket"
>
  <Group>
    <fieldset
      className="group"
    >
      <Title />
    </fieldset>
  </Group>
</div>
`;
